# Metatron

./: Abductive Debugger.rs  Books  Day Goals  Features  GOALS.md  IDEAS.md  LICENSE  Metatron.bak  Metatron.cts  Metatron.html  Next Features that will be available  Project Structure  README.md  Review  STACK.md  code_to_debug.py
Metatron/: CMakeLists.txt  README.md  app.py  main.js  package.json  pom.xml  requirements.txt  utils.py
Metatron/src/: App.css  App.js  main.py
Metatron/src/debug/: js_debugger.js
Metatron/src/utils/: helper.py
Metatron/static/: styles.css
Metatron/templates/: debug.html  index.html  login.html  register.html  result.html  sessions.html  simulate_quantum.html  visualize_quantum.html
Release_Notes/: 06_24
backend/: debugger.py
frontend/: app.py
